packages/compiler-rs/tests/snapshots/v_on__should_wrap_keys_guard_for_static_key_event_with_left_or_right_modifiers.snap
---
source: tests/v_on.rs
expression: code
---
_delegateEvents("keyup");
import { delegateEvents as _delegateEvents, template as _template, withKeys as _withKeys } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  n0.$evtkeyup = _withKeys(test, ["left"]);
  return n0;
})();
